--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" android:label="Destini"
+                  android:configChanges="keyboardHidden|orientation|screenSize"><!--android:configchanges=".." is used to handle the configuration and screen rotation -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
